Fix broken layout for Safari

--- a/css/layout.css
+++ b/css/layout.css
@@ -13,6 +13,14 @@ main{
 #canvas-grid-item {
   grid-area: canvas;
   min-height: 100px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+#sticky-panel{
+  max-width: 800px;
+  flex-grow: 1;
 }
 
 .sticky-canvas{
@@ -41,9 +49,10 @@ main{
   }
 
   #canvas-grid-item{
-    max-width: 800px;
-    float: none;
-    margin: 0 auto;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+
   }
 
   #options{
